Wed Apr 09 01:21:57 BST 2003  Olly Betts <olly@survex.com>

	* Makefile.am: Removed bogus extra "\".

Mon Mar 31 19:42:24 BST 2003  Olly Betts <olly@survex.com>

	* Makefile.am: Install documentation!
	* omega.spec.in: Merged in changes to RPM packaging from Fabrice Colin
	  and reworked further.

Fri Mar 28 17:47:45 GMT 2003  Olly Betts <olly@survex.com>

	* templates/query,templates/query2: Removed bogus setting of defunct
	  xB parameter; correctly propagate multiple B parameters.

Fri Mar 28 17:45:41 GMT 2003  Olly Betts <olly@survex.com>

	* omindex.cc: Report correct version number (was hard-wired to 1.0!)

Tue Mar 25 14:46:10 GMT 2003  Olly Betts <olly@survex.com>

	* query.cc: If xP and P are both empty, classify as SAME_QUERY not
	  NEW_QUERY as there may be a boolean query too.
	* query.cc: Fixed off-by-one error in rounding down topdoc - it was
	  possible to get to an empty page of hits if there were exactly a
	  multiple of HITSPERPAGE matches and the matcher over-estimated the
	  number of matches and Omega displayed page links.

Mon Mar 24 09:40:04 GMT 2003  Sam Liddicott <sam.liddicott@orange.co.uk>

	* templates/query: Added propagation of B boolean filter
	* templates/query2: factored about a bit more, query2 is
	  a more modular version of query which will ultimately
	  lend itself to customisation a bit more to the uninitiated.

Tue Mar 04 01:02:12 GMT 2003  Olly Betts <olly@survex.com>

	* omega.cc: Fixed handling of multiple DB parameters to be as
	  documented.

Fri Feb 28 09:52:03 GMT 2003 Sam Liddicott <sam.liddicott@orange.co.uk>

	* Added $collapsed to omegascript to give the number of hits
	  collapsed into the current hit, eg:

	  $if{$ne{$collapsed,0},$collapsed hidden results 
	                        ($value{$cgi{COLLAPSE}})}

	* templates/godmode: removed euro ferret icon reference
	* templates/godmode: added value dumping, for values from 0-255

Thu Feb 27 11:58:13 GMT 2003  Olly Betts <olly@survex.com>
